--- a/pom.xml
+++ b/pom.xml
@@ -13,39 +13,39 @@
     <version>1.5.3.RELEASE</version>
   </parent>
 
+  <properties>
+    <java.version>1.8</java.version>
+  </properties>
+
   <dependencies>
+    <!-- Setup Spring Data JPA Repository support -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
+    <!-- DB driver -->
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <!-- Setup Spring MVC & REST, use Embedded Tomcat -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <!-- Testing starter -->
+    <!-- see https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-testing.html -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>com.jayway.jsonpath</groupId>
-      <artifactId>json-path</artifactId>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
-
-  <properties>
-    <java.version>1.8</java.version>
-  </properties>
-
 
   <build>
     <plugins>
+      <!-- The Spring Boot Maven plugin provides many convenient features -->
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
@@ -53,16 +53,4 @@
     </plugins>
   </build>
 
-  <repositories>
-    <repository>
-      <id>spring-releases</id>
-      <url>https://repo.spring.io/libs-release</url>
-    </repository>
-  </repositories>
-  <pluginRepositories>
-    <pluginRepository>
-      <id>spring-releases</id>
-      <url>https://repo.spring.io/libs-release</url>
-    </pluginRepository>
-  </pluginRepositories>
 </project>
