--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 spring.datasource.url=jdbc:postgresql://localhost/sandbox-db
-spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=sandbox-user
 spring.datasource.password=pass
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #In production, it's often highly recommended you use none or simply don't specify this property.
 spring.jpa.hibernate.ddl-auto=none
+# https://tomcat.apache.org/tomcat-8.0-doc/jdbc-pool.html#Common_Attributes
+# Number of ms to wait before throwing an exception if no connection is available.
+spring.datasource.tomcat.max-wait=10000
+# Maximum number of active connections that can be allocated from this pool at the same time.
+spring.datasource.tomcat.max-active=50
+# Validate the connection before borrowing it from the pool.
+spring.datasource.tomcat.test-on-borrow=true
