--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,21 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <includes>
+            <include>**/*Tests.java</include>
+          <include>**/*TU.java</include>
+            <include>**/*Test.java</include>
+          </includes>
+          <excludes>
+            <exclude>**/Abstract*.java</exclude>
+            <exclude>**/*TI.java</exclude>
+          </excludes>
+        </configuration>
+    </plugin>
     </plugins>
   </build>
 
