--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 # https://tomcat.apache.org/tomcat-8.0-doc/jdbc-pool.html#Common_Attributes
 # See also "Connection to a production database" from https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-sql.html
+# If you use the spring-boot-starter-jdbc or spring-boot-starter-data-jpa ‘starters’ you will automatically get a dependency to tomcat-jdbc.
 # Number of ms to wait before throwing an exception if no connection is available.
 spring.datasource.tomcat.max-wait=10000
 # Maximum number of active connections that can be allocated from this pool at the same time.
