--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <groupId>com.cgi</groupId>
   <artifactId>springboot-restservices-sandbox</artifactId>
   <version>0.1.0</version>
+  <packaging>war</packaging>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -64,6 +65,11 @@
       <artifactId>springfox-swagger2</artifactId>
       <version>2.2.2</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-tomcat</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
