--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,12 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.5.3.RELEASE</version>
+    <version>1.5.7.RELEASE</version>
   </parent>
 
   <properties>
     <java.version>1.8</java.version>
+    <springfox.version>2.7.0</springfox.version>
   </properties>
 
   <dependencies>
@@ -53,13 +54,13 @@
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger-ui</artifactId>
-      <version>2.5.0</version>
+      <version>${springfox.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId>
-      <version>2.5.0</version>
+      <version>${springfox.version}</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
