add static content for test with jquery

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
       <version>${springfox.version}</version>
       <scope>compile</scope>
     </dependency>
+    <!-- https://docs.spring.io/spring-boot/docs/current/reference/html/using-boot-devtools.html -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
   <build>
