--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -4,8 +4,8 @@
   "description": "springboot-restservices-sandbox with :",
   "main": "index.js",
   "scripts": {
-    "build": "browserify index.js -o build/app.js",
-    "watch": "watchify index.js -o build/app.js -v --debug"
+    "build": "browserify index.js -o app.js",
+    "watch": "watchify index.js -o app.js -v --debug"
   },
   "repository": {
     "type": "git",
