--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
   <build>
     <resources>
       <resource>
+        <!-- copied with du process-resources phase after the generate-resources -->
         <directory>src/main/resources</directory>
         <excludes>
           <exclude>**/static/node_modules/**</exclude>
@@ -90,6 +91,7 @@
     </resources>
     <plugins>
       <plugin>
+        <!-- done with the generate-resources phase -->
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
         <!-- requires Maven version 3.1.0 -->
